--- a/src/styles.css
+++ b/src/styles.css
@@ -109,10 +109,7 @@ body {
 .modal-dialog {
   background-color: #f3bb84;
   /* 中の余白。単位が必要 */
-  padding-bottom: 20px;
-  padding-top: 20px;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding: 20px 50px 20px 50px;
   /* 角の丸み */
   border-radius: 16px;
   /* ? ダイアログの影 */
